# phomo-rs

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  vite.config.ts
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml
assets/: index-B-h2coni.js  index-BVohZR66.js  index-OeuqgrUZ.css  index-Z0WisAOH.css  index-mFMfkscE.js  phomo_wasm_bg-BR0apKgF.wasm  phomo_wasm_bg-BWfLzcxU.wasm  phomo_wasm_bg-D4o2DiDs.wasm
docs/: CNAME  index.html
docs/assets/: index--klUIRxA.js  index-5yRl7HJ0.js  index-6JnbQQAx.js  index-B66g-l78.css  index-BDLOwld0.css  index-BHuVdAwf.js  index-Bn5Uk35b.js  index-Bosd8mD9.js  index-C0c676hv.js  index-C0ciANWs.js  index-CCn6OI2i.css  index-COfXOFRE.css  index-CjcGm50t.js  index-Cwv8FO0g.js  index-D2x8T832.js  index-DLFiX8Ph.css  index-DaNfBber.js  index-Dti6QgpJ.css  index-OrERI96I.js  index-dE-Ztuzv.js  index-eBvBwhyk.js  index-eONsaYUb.js  index-fWlfj5uw.css  index-yv4fDPZ8.js  mosaicWorker-BiL1cIl2.js  mosaicWorker-Bk1GGv76.js  mosaicWorker-C_vgiYbP.js  mosaicWorker-Cg4uAm1a.js  mosaicWorker-DE_cIQwL.js  mosaicWorker-DyiIjekX.js  mosaicWorker-E6HTzrr3.js  mosaicWorker-EM_JRzVG.js  mosaicWorker-OLRYP4L-.js  mosaicWorker-yejwWUxh.js  phomo_wasm-DZz_ZmXt.js  phomo_wasm-utORmaTx.js  phomo_wasm_bg-B0Yq1l3d.wasm  phomo_wasm_bg-BR6GePU0.wasm  phomo_wasm_bg-Bpz6lO0D.wasm  phomo_wasm_bg-C0lyUJ7D.wasm  (+8 more)
phomo/: CHANGELOG.md  Cargo.toml  README.md
phomo-cli/: CHANGELOG.md  Cargo.toml  build.rs
phomo-cli/completions/: _phomo  _phomo.ps1  phomo.bash  phomo.elv  phomo.fish
phomo-cli/src/: cli.rs  main.rs
phomo-cli/tests/: cli.rs
phomo-cli/tests/data/: faces
phomo-wasm/: CHANGELOG.md  Cargo.toml  Makefile  README.md
phomo-wasm/.cargo/: config.toml
phomo-wasm/src/: lib.rs
phomo/benches/: main.rs
phomo/src/: blueprint.rs  color_match.rs  distance_matrix.rs  error.rs  gpu.rs  lib.rs  lsap.rs  macros.rs  master.rs  metrics.rs  mosaic.rs  utils.rs
phomo/src/metrics/: default.rs  mod.rs  simd.rs
phomo/src/shaders/: distance_matrix_norm_l1.wgsl  distance_matrix_norm_l2.wgsl
phomo/src/solvers/: auction.rs  error.rs  greedy.rs  hungarian.rs  mod.rs
phomo/tests/: mosaic.rs
phomo/tests/data/mosaic/: mosaic_blueprint.json  mosaic_blueprint_greedy.json
src/: App.tsx  color_match.rs  color_space.rs  index.css  lib.rs  main.tsx  master.rs  metrics.rs  mosaic.rs  utils.rs
src/components/: Footer.tsx  Header.tsx  MosaicBlueprint.tsx  MosaicControls.tsx  MosaicPreview.tsx  OptionCard.tsx  RangeInput.tsx  TileManagementModal.tsx  TileModal.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useImageSelection.ts  useMosaicCreation.ts
src/types/: blueprint.ts  colorMatchingMethods.ts  tile.ts  tileAssignment.ts  userImage.ts
src/utils/: imageUtils.ts
src/workers/: mosaicWorker.ts
tests/: mosaic.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: MosaicControls.tsx  MosaicGrid.tsx  TileManagementModal.tsx
