[workspace]
members = ["phomo", "phomo-cli", "phomo-wasm"]
resolver = "2"

package.authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
package.edition = "2021"
package.license = "MIT"
package.repository = "https://github.com/loiccoyle/phomo"

[workspace.dependencies]
image = "0.25.2"
log = "0.4.22"

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
