[package]
name = "phomo-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "phomo"
path = "src/main.rs"

[dependencies]
phomo = { path = "../phomo", version = "0.1.0" }

clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
clap_complete = { version = "4.5.32" }
env_logger = "0.11.5"

image = { workspace = true }
log = { workspace = true }
