[package]
name = "phomo-cli"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for phomo - generate photo mosaics from the command line"
keywords = ["cli", "photo-mosaic", "image", "art"]

[[bin]]
name = "phomo"
path = "src/main.rs"

[dependencies]
phomo = { path = "../phomo", version = "0.4.0", features = [
  "parallel",
  "progress_bar",
] }

clap = { version = "4.5.26", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
clap_complete = { version = "4.5.42" }
env_logger = "0.11.6"

image = { workspace = true }
log = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.0.7"

[build-dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = { version = "4.5.42" }
clap-verbosity-flag = "3.0.2"
