[package]
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

name = "phomo-wasm"
version = "0.10.2"
description = "Wasm bindings for the phomo rust crate - a photo mosaic library"

[dependencies]
phomo = { path = "../phomo", version = "0.7.3", default-features = false, features = [
  "blueprint",
  "simd",
] }
image = { workspace = true }

wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
base64 = "0.22.1"
js-sys = "0.3.77"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '--enable-simd']
