[package]
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

name = "phomo"
version = "0.2.0"
description = "A photo mosaic generation library"
keywords = ["photo-mosaic", "image", "art"]

[dependencies]
image = { workspace = true }
log = { workspace = true }

palette = "0.7.6"
pathfinding = "4.11.0"
rayon = { optional = true, version = "1.10.0" }
indicatif = { optional = true, version = "0.17.8" }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.131", optional = true }

[features]
default = ["parallel"]
blueprint = ["serde", "serde_json"]
parallel = ["rayon", "indicatif?/rayon"]
progress_bar = ["indicatif"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false
