[package]
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

name = "phomo"
version = "0.7.0"
description = "A photo mosaic generation library"
keywords = ["photo-mosaic", "image", "art"]

[dependencies]
image = { workspace = true }
log = { workspace = true }

palette = "0.7.6"
rayon = { optional = true, version = "1.10.0" }
indicatif = { optional = true, version = "0.17.9" }
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = { version = "1.0.137", optional = true }
thiserror = "2.0.11"

[features]
default = ["parallel"]
blueprint = ["serde", "serde_json"]
parallel = ["rayon", "indicatif?/rayon"]
progress_bar = ["indicatif"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
